--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ SESSION_SECRET=your_session_secret_here
 # Telegram Bot Configuration 
 # IMPORTANT: Never commit your real token to Git!
 # Get your token from BotFather: https://t.me/botfather
-TELEGRAM_BOT_TOKEN=8016071029:AAEpcprNJEM79IKkDPO4kpxt5u5SSeftFec
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
 # Other API Keys
 # Add any other API keys your application uses 
